[gd_scene load_steps=5 format=3 uid="uid://dur0lx77it1yi"]

[ext_resource type="Script" path="res://scripts/Player_UI.gd" id="1_bhhnd"]
[ext_resource type="Texture2D" uid="uid://csqjpkl2iq3wo" path="res://assets/icons/sands-of-time.svg" id="1_vv4xg"]
[ext_resource type="Texture2D" uid="uid://btkoil6fcjuyr" path="res://assets/icons/gold-bar.svg" id="2_sm12h"]
[ext_resource type="Texture2D" uid="uid://c2niq0gxy7fqv" path="res://assets/icons/wood-pile.svg" id="3_5ympu"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhhnd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 644.0

[node name="ActionBarContainer" type="Panel" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -396.0
offset_top = -201.0
grow_horizontal = 0
grow_vertical = 0

[node name="GridActionSlots" type="GridContainer" parent="CanvasLayer/Main/ActionBarContainer"]
custom_minimum_size = Vector2(60, 60)
layout_direction = 2
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -195.0
offset_right = -6.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 4

[node name="Panel" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots/Panel"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
action_mode = 0
text = "1"
icon_alignment = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots/Panel2"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
action_mode = 0
text = "2"
icon_alignment = 1

[node name="Panel3" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots/Panel3"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
action_mode = 0
text = "3"
icon_alignment = 1

[node name="Panel4" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel5" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel6" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel7" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel8" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel9" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel10" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel11" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Panel12" type="Panel" parent="CanvasLayer/Main/ActionBarContainer/GridActionSlots"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="ResourceList" type="ItemList" parent="CanvasLayer/Main/ActionBarContainer"]
clip_contents = false
layout_mode = 2
offset_left = 6.0
offset_top = 6.0
offset_right = 129.0
offset_bottom = 196.0
item_count = 3
fixed_icon_size = Vector2i(20, 20)
item_0/text = ""
item_0/icon = ExtResource("1_vv4xg")
item_0/selectable = false
item_1/text = ""
item_1/icon = ExtResource("2_sm12h")
item_1/selectable = false
item_2/text = ""
item_2/icon = ExtResource("3_5ympu")
item_2/selectable = false

[connection signal="button_up" from="CanvasLayer/Main/ActionBarContainer/GridActionSlots/Panel/Button" to="." method="_on_button_button_up_A1"]
[connection signal="button_up" from="CanvasLayer/Main/ActionBarContainer/GridActionSlots/Panel2/Button" to="." method="_on_button_button_up_A2"]
